<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@color/BlackFont"
            android:textSize="16sp"
            tools:layout_marginTop="60dp"
            tools:text="@string/contact_title" />

        <RelativeLayout
            android:id="@+id/contact_success_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/contact_title"
            android:visibility="gone">

            <TextView
                android:id="@+id/thanks_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="140dp"
                android:text="@string/thanks_contact"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/msg_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thanks_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/message_success_contact"
                android:textAlignment="center"
                android:textColor="@color/BlackFont"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/send_new_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/msg_success"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:text="@string/send_new_message"
                android:textColor="@color/BlueFont"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/form_contact_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_title"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:visibility="visible">

            <test.edualves.easynvesttest.utils.CustomTextInputLayout
                android:id="@+id/name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextFloatingLabelRegisterBlue"
                tools:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusLeft="@+id/input_email"
                    android:textColor="#000"
                    android:textSize="14sp"
                    tools:hint="@string/name_label_form" />

            </test.edualves.easynvesttest.utils.CustomTextInputLayout>

            <test.edualves.easynvesttest.utils.CustomTextInputLayout
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_text_input"
                android:theme="@style/EditTextFloatingLabelRegisterBlue"
                tools:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="#000"
                    android:textSize="14sp"
                    tools:hint="@string/email_label_form" />

            </test.edualves.easynvesttest.utils.CustomTextInputLayout>

            <test.edualves.easynvesttest.utils.CustomTextInputLayout
                android:id="@+id/phone_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_text_input"
                android:theme="@style/EditTextFloatingLabelRegisterBlue"
                tools:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="#000"
                    android:textSize="14sp"
                    tools:hint="@string/phone_label_form" />

            </test.edualves.easynvesttest.utils.CustomTextInputLayout>

            <ImageView
                android:id="@+id/image_placeholder"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/phone_text_input"
                android:layout_centerHorizontal="true"
                android:src="@drawable/bitmap_placeholder"
                tools:layout_marginTop="20dp" />

            <CheckBox
                android:id="@+id/checkbox_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_placeholder"
                android:textColor="@color/Manatee"
                android:textSize="14sp"
                tools:layout_marginTop="25dp"
                tools:text="@string/email_checkbox_text" />

            <Button
                android:id="@+id/send_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkbox_email"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="90dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_btn_shape"
                android:textAllCaps="false"
                android:textColor="@color/GhostWhite"
                tools:text="@string/btn_send_message" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>