<resources>
    <string name="app_name">EasynvestTest</string>
    <string name="name_label_form">Nome</string>
    <string name="email_label_form">Email</string>
    <string name="email_checkbox_text">Gostaria de cadastrar meu email</string>
    <string name="next_btn_title">PRONTO</string>
    <string name="mandatory_field">Campo obrigatório</string>
    <string name="invalid_email_error">Email inválido</string>
    <string name="success_title">Obrigado pelas informações!</string>
    <string name="btn_success_title">Vamos investir!</string>
    <string name="fund_market">CDI</string>
    <string name="title_screen_investment">Investimento</string>
    <string name="fundo">Fundo</string>
    <string name="cdi_label">CDI</string>
    <string name="at_month_label">No mês</string>
    <string name="at_year_label">No ano</string>
    <string name="at_twelve_months_label">12 meses</string>
    <string name="baixar_label">Baixar</string>
    <string name="text_menu_contact">Contato</string>
    <string name="text_menu_investment">Investimento</string>
    <string name="btn_invest_title">Investir</string>
    <string name="contact_title">Olá, primeiro se apresente com o seu nome:</string>
    <string name="phone_label_form">Telefone</string>
    <string name="btn_send_message">Enviar</string>
    <string name="thanks_contact">Obrigado!</string>
    <string name="message_success_contact">Mensagem enviada\ncom sucesso :)</string>
    <string name="send_new_message">Enviar nova mensagem</string>
</resources>
