<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_investment"
        android:enabled="true"
        android:icon="@drawable/ic_assessment_white_18px"
        android:title="@string/text_menu_investment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contact"
        android:enabled="true"
        android:icon="@drawable/ic_chat_white_18px"
        android:title="@string/text_menu_contact"
        app:showAsAction="ifRoom" />
</menu>