<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/success_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="214dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/next_investments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_success_title"
        android:textColor="@color/GhostWhite"
        android:background="@drawable/blue_btn_shape"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>